--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,6 @@
 /* Final Estilos genericos de html */
 
 /* Inicio Estilos header */
-
 .header-container--title {
   justify-content: space-between;
   align-items: center;
@@ -25,13 +24,15 @@
 }
 /* Final Estilos header */
 
+/* Inicio Estilos Table */
 .card__wrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   gap: 2rem;
 }
 
-/* Inicio Estilos Table */
 .cart-table {
   width: 70%;
   border-collapse: collapse;
@@ -177,3 +178,14 @@
   font-size: 1rem;
 }
 /* Final Estilos footer */
+
+/* Descktop Style */
+@media (min-width: 768px) {
+  .card__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+  }
+}
